--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node -r dotenv/config ./node_modules/.bin/react-scripts build dotenv_config_path=.env.production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "eject": "react-scripts eject",
     "watch:css": "postcss --watch tailwindcss/style.css -o src/assets/css/style.css"
